--- a/github-battle/app/index.html
+++ b/github-battle/app/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script  async defer></script>
   </body>
 </html>
